Changed layout for homepage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="table">
+    <h1>Inventory Tracker</h1>
+
+    <button>View Inventory</button>
+    <button>Add Item</button>
+    <button>Remove Item</button>
+    <!-- <div id="table">
         <h1>Inventory Tracker</h1>
         <div class="content">
             <h2>Trimble</h2>
@@ -53,7 +58,7 @@
             <hr>
             <h3>Keyboard/Mice:</h3>
         </div>
-    </div>
+    </div> -->
 
 </body>
 </html>
