--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <title>Inventory Login</title>
 </head>
 <body>
+    <h1>Login to Inventory Tracker</h1>
     <input type="email" placeholder="Enter Your Email">
     <input type="password" placeholder="Enter Your Password"> 
     <button type="submit">Login</button>
