--- a/login.html
+++ b/login.html
@@ -12,4 +12,6 @@
     <input type="password" placeholder="Enter Your Password"> 
     <button type="submit">Login</button>
 </body>
+
+<footer>Created by Amanda Faulkenberry</footer>
 </html>
